# coriander

./: .gitignore  README.md  pyproject.toml
.github/workflows/: master.yml  pull-requests.yml
coriander/: __init__.py  core.py  generation.py  matching.py  tokenizers.py  tokens.py
scripts/: lint.sh  test.sh
tests/: test_generation.py  test_matcher.py  test_tokenizers.py  test_tokens.py
